fixed title overflow; added comments helptext

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,8 @@
 #headerText {
     display: inline-block;
 }
+
+.reviewTitle {
+    white-space: normal;
+    text-align: left;
+}
